--- a/core/products/templates/products/edit.html
+++ b/core/products/templates/products/edit.html
@@ -1,4 +1,4 @@
-{% extends "./sidebar.html" %}
+{% extends "../sidebar.html" %}
 
 {% block body %}
 {% load static %}
@@ -13,18 +13,6 @@
         <h6 class=" navbar-text pe-3">Nombre de producto:</h6>
         <span class="input-group-text" id="basic-addon1"><span class="fas fa-dice-d6"></span></span>
         <input type="text" class="form-control" placeholder="Nombre de producto" aria-label="Nombre de producto" aria-describedby="basic-addon1" value="$name">
-    </div>
-    <div class="input-group mb-3">
-        <h6 class=" navbar-text pe-3">Precio de compra:</h6>
-        <span class="input-group-text">COP$</span>
-        <span class="input-group-text" id="buy-price-input">$actualBPrice</span>
-        <input type="text" class="form-control" id="buy-price">
-    </div>
-    <div class="input-group mb-3">
-        <h6 class=" navbar-text pe-3">Precio de venta:</h6>
-        <span class="input-group-text">COP$</span>
-        <span class="input-group-text" id="sell-price-input">$actualSPrice</span>
-        <input type="text" class="form-control" id="sell-price">
     </div>
     <div class="input-group mb-3">
         <h6 class=" navbar-text pe-3">Categoria:</h6>
@@ -67,14 +55,6 @@
 </div>
 
 <script>
-    $('#buy-price').priceFormat({
-        prefix: '',
-        centsLimit: 0
-    });
-    $('#sell-price').priceFormat({
-        prefix: '',
-        centsLimit: 0
-    });
 
     $(document).ready(function() {
         $('#bar-code').on('keydown', function(event) {
