--- a/core/products/templates/products/create.html
+++ b/core/products/templates/products/create.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="btn-group input-group" role="group" aria-label="Basic outlined example">
-        <button type="button" class="btn btn-outline-secondary">Cancelar</button>
+        <a href="{% url 'products:index' %}" class="btn btn-outline-secondary">Cancelar</a>
         <button type="button" class="btn btn-outline-success">Guardar</button>
     </div>
 </div>
