--- a/core/categorys/templates/categorys/create.html
+++ b/core/categorys/templates/categorys/create.html
@@ -2,45 +2,24 @@
 
 {% block body %}
 {% load static %}
-<script src="{% static 'js/jquery-3.7.1.js' %}"></script>
-<script src="{% static 'js/jquery.priceformat.min.js' %}"></script>
 <div class="container align-content-start overflow-auto text-center" style="margin:  5rem auto; width: 1000px;">
     <div class="form-group">
         <h3 class="m-0">$name</h3>
         <small class="text-muted">ID: $id</small>
     </div>
+    
     <div class="input-group mb-3">
         <h6 class=" navbar-text pe-3">Nombre de categoria:</h6>
-        <span class="input-group-text" id="basic-addon1"><span class="fas fa-dice-d6"></span></span>
+        <span class="input-group-text" id="basic-addon1"><span class="fas fa-user-tag"></span></span>
         <input type="text" class="form-control" placeholder="Nombre de producto" aria-label="Nombre de producto" aria-describedby="basic-addon1" value="$name">
     </div>
     <div class="input-group mb-3">
         <h6 class=" navbar-text pe-3">Descripción:</h6>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <textarea class="form-control" aria-label="Ingrese su descripción opcional..." placeholder="Ingrese su descripción opcional..."></textarea>
     </div>
     <div class="btn-group input-group" role="group" aria-label="Basic outlined example">
         <a href="{% url 'categorys:index' %}" class="btn btn-outline-secondary">Cancelar</a>
-        <button type="button" class="btn btn-outline-danger">Eliminar</button>
         <button type="button" class="btn btn-outline-success">Guardar</button>
     </div>
 </div>
-
-<script>
-    
-    $('#buy-price').priceFormat({
-        prefix: '',
-        centsLimit: 0
-    });
-    $('#sell-price').priceFormat({
-        prefix: '',
-        centsLimit: 0
-    });
-
-    $(document).ready(function() {
-        $('#icon-sel').on('click', function(event) {
-            alert('button');
-        });
-    });
-    
-</script>
 {% endblock %}
