--- a/core/stock/templates/stock/edit.html
+++ b/core/stock/templates/stock/edit.html
@@ -6,14 +6,8 @@
 <script src="{% static 'js/dataTables1.js' %}"></script>
 <div class="container align-content-center overflow-auto " style="margin:  5rem auto;">
     <div class="form-group text-center mb-3">
-        <h3 class="m-0">$name</h3>
-        <small class="text-danger"><i>EL CLIENTE DEBE $debt</i></small>
-    </div>
-    
-    <div class="input-group mb-3">
-        <h6 class=" navbar-text pe-3">Nombre de cliente:</h6>
-        <span class="input-group-text" id="basic-addon1"><span class="fas fa-user-tag"></span></span>
-        <input type="text" class="form-control" placeholder="Nombre de producto" aria-label="Nombre de producto" aria-describedby="basic-addon1" value="$name">
+        <h3 class="m-0"><a href="#">Producto</a></h3>
+        <small class="text-info"><i>Inventario actual: $debt</i></small>
     </div>
     <table id="productos" class="display table table-striped table-bordered table-hover dataTable" style="width:100%;">
         <thead>
@@ -51,12 +45,13 @@
     <div class="container border mt-3 p-2" id="debtDiv" style="display: none;">
         <div class=" input-group">
             <input type="datetime-local" name="" id="" class="form-control">
-            <input type="number" name="" id="" placeholder="Importe (Valor + es pago, - es deuda)" class="form-control">
+            <input type="number" name="" id="" placeholder="Cantidad" class="form-control">
+            <input type="number" name="" id="" placeholder="Precio de compra" class="form-control">
             <button class="btn btn-outline-secondary" type="button">Aceptar</button>
         </div>
     </div>
     <div class="btn-group input-group mt-3" role="group" aria-label="Basic outlined example">
-        <button type="button" class="btn btn-outline-primary" id="debtBtn">Añadir deuda</button>
+        <button type="button" class="btn btn-outline-primary" id="debtBtn">Añadir inventario</button>
     </div>
     <div class="btn-group input-group mt-3" role="group" aria-label="Basic outlined example">
         <a href="{% url 'customers:index' %}" class="btn btn-outline-secondary">Cancelar</a>
