--- a/core/stock/templates/stock/index.html
+++ b/core/stock/templates/stock/index.html
@@ -5,8 +5,8 @@
 <script src="{% static 'js/jquery-3.7.1.js' %}"></script>
 <script src="{% static 'js/dataTables1.js' %}"></script>
 <div class="container align-content-center overflow-auto " style="margin:  5rem auto;">
-    <h3 class="m-0">Clientes</h3>
-    <small><a href="{% url 'customers:create' %}">Añadir</a></small>
+    <h3 class="m-0">Inventario</h3>
+    <small><a href="{% url 'stock:create' %}">Añadir producto</a></small>
     <table id="productos" class="display table table-striped table-bordered table-hover dataTable" style="width:100%;">
         <thead>
             <tr>
@@ -20,7 +20,7 @@
         </thead>
         <tbody>
             <tr>
-                <td class=" d-flex justify-content-between">Tiger Nixon<a href="{% url 'customers:edit' %}">Editar</a></td>
+                <td class=" d-flex justify-content-between">Tiger Nixon<a href="{% url 'stock:edit' %}">Editar</a></td>
                 <td>System Architect</td>
                 <td>Edinburgh</td>
                 <td>61</td>
