--- a/core/categorys/templates/categorys/edit.html
+++ b/core/categorys/templates/categorys/edit.html
@@ -6,23 +6,31 @@
 <script src="{% static 'js/jquery.priceformat.min.js' %}"></script>
 <div class="container align-content-start overflow-auto text-center" style="margin:  5rem auto; width: 1000px;">
     <div class="form-group">
-        <h3 class="m-0">$name</h3>
-        <small class="text-muted">ID: $id</small>
+        <h3 class="m-0">{{category.name}}</h3>
+        <small class="text-muted">ID: {{category.id}}</small>
     </div>
-    <div class="input-group mb-3">
-        <h6 class=" navbar-text pe-3">Nombre de categoria:</h6>
-        <span class="input-group-text" id="basic-addon1"><span class="fas fa-dice-d6"></span></span>
-        <input type="text" class="form-control" placeholder="Nombre de producto" aria-label="Nombre de producto" aria-describedby="basic-addon1" value="$name">
-    </div>
-    <div class="input-group mb-3">
-        <h6 class=" navbar-text pe-3">Descripción:</h6>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-    </div>
-    <div class="btn-group input-group" role="group" aria-label="Basic outlined example">
-        <a href="{% url 'categorys:index' %}" class="btn btn-outline-secondary">Cancelar</a>
-        <button type="button" class="btn btn-outline-danger">Eliminar</button>
-        <button type="button" class="btn btn-outline-success">Guardar</button>
-    </div>
+    <form action="{% url 'categorys:edit' %}" method="post">
+        {% csrf_token %}
+        <!-- ID -->
+        <input type="hidden" name="id" value="{{ category.id }}">
+        <!-- NAME -->
+        <div class="input-group mb-3">
+            <h6 class=" navbar-text pe-3">Nombre de categoria:</h6>
+            <span class="input-group-text" id="basic-addon1"><span class="fas fa-dice-d6"></span></span>
+            <input name="name" type="text" class="form-control" placeholder="Nombre de producto" aria-label="Nombre de producto" aria-describedby="basic-addon1" value="{{category.name}}">
+        </div>
+        <!-- DESCRIPTION -->
+        <div class="input-group mb-3">
+            <h6 class=" navbar-text pe-3">Descripción:</h6>
+            <textarea name="description" class="form-control" aria-label="With textarea">{{category.description}}</textarea>
+        </div>
+        <!-- SUBMIT -->
+        <div class="btn-group input-group" role="group" aria-label="Basic outlined example">
+            <a href="{% url 'categorys:index' %}" class="btn btn-outline-secondary">Cancelar</a>
+            <a href="{% url 'categorys:edit' %}?delete={{ category.id }}" class="btn btn-outline-danger">Eliminar</a>
+            <button type="submit" class="btn btn-outline-success">Guardar</button>
+        </div>
+    </form>
 </div>
 
 <script>
