--- a/core/products/templates/products/create.html
+++ b/core/products/templates/products/create.html
@@ -8,48 +8,54 @@
     <div class="form-group">
         <h3 class="m-0 pb-3">Crear producto</h3>
     </div>
-    <div class="input-group mb-3">
-        <h6 class=" navbar-text pe-3">Nombre de producto:</h6>
-        <span class="input-group-text" id="basic-addon1"><span class="fas fa-dice-d6"></span></span>
-        <input type="text" class="form-control" placeholder="Nombre de producto" aria-label="Nombre de producto" aria-describedby="basic-addon1">
-    </div>
-    <div class="input-group mb-3">
-        <h6 class=" navbar-text pe-3">Categoria:</h6>
-        <label class="input-group-text" for="inputGroupSelect01"><span class="fas fa-list"></span></label>
-        <select class="form-select" id="inputGroupSelect01">
-            <option selected>Choose...</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-        </select>
-    </div>
-    <div class="input-group mb-3">
-        <h6 class=" navbar-text pe-3">Vendedor:</h6>
-        <label class="input-group-text" for="inputGroupSelect01"><span class="fas fa-truck-ramp-box"></span></label>
-        <select class="form-select" id="inputGroupSelect01">
-            <option selected>Choose...</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-        </select>
-    </div>
-      
-    <div class="input-group mb-3">
-        <h6 class=" navbar-text pe-3">Descripción:</h6>
-        <textarea class="form-control" aria-label="Ingrese su descripción opcional..." placeholder="Ingrese su descripción opcional..."></textarea>
-    </div>
-
-    <div class="input-group mb-3">
-        <h6 class=" navbar-text pe-3">Código de barras:</h6>
-        <span class="input-group-text"><span class="fas fa-barcode"></span></span>
-        <input type="text" class="form-control" id="bar-code" placeholder="Código de barras" aria-label="Código de barras">
-        <label class="btn btn-outline-secondary" for="bar-code">Editar</label>
-    </div>
-
-    <div class="btn-group input-group" role="group" aria-label="Basic outlined example">
-        <a href="{% url 'products:index' %}" class="btn btn-outline-secondary">Cancelar</a>
-        <button type="button" class="btn btn-outline-success">Guardar</button>
-    </div>
+    <form action="{% url 'products:create' %}" method="post">
+        {% csrf_token %}
+        <!-- NAME -->
+        <div class="input-group mb-3">
+            <h6 class=" navbar-text pe-3">Nombre de producto:</h6>
+            <span class="input-group-text" id="basic-addon1"><span class="fas fa-dice-d6"></span></span>
+            <input name="name" type="text" class="form-control" placeholder="Nombre de producto" required>
+        </div>
+        <!-- CATEGORY -->
+        <div class="input-group mb-3">
+            <h6 class=" navbar-text pe-3">Categoria:</h6>
+            <label class="input-group-text" for="inputGroupSelect01"><span class="fas fa-list"></span></label>
+            <select name="category" class="form-select" id="inputGroupSelect01" required>
+                <option selected>Seleccione...</option>
+                {% for category in categorys %}
+                <option value="{{category.id}}">{{category.name}}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <!-- VENDOR -->
+        <div class="input-group mb-3">
+            <h6 class=" navbar-text pe-3">Vendedor:</h6>
+            <label class="input-group-text" for="inputGroupSelect01"><span class="fas fa-truck-ramp-box"></span></label>
+            <select name="vendor" class="form-select" id="inputGroupSelect01" required>
+                <option selected>Seleccione...</option>
+                {% for vendor in vendors %}
+                <option value="{{vendor.id}}">{{vendor.name}}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <!-- DESCRIPTION -->
+        <div class="input-group mb-3">
+            <h6 class=" navbar-text pe-3">Descripción:</h6>
+            <textarea name="description" class="form-control" aria-label="Ingrese su descripción opcional..." placeholder="Ingrese su descripción opcional..."></textarea>
+        </div>
+        <!-- BAR CODE -->
+        <div class="input-group mb-3">
+            <h6 class=" navbar-text pe-3">Código de barras:</h6>
+            <span class="input-group-text"><span class="fas fa-barcode"></span></span>
+            <input name="bar_code" type="text" class="form-control" id="bar-code" placeholder="Código de barras" aria-label="Código de barras">
+            <label class="btn btn-outline-secondary" for="bar-code">Editar</label>
+        </div>
+        <!-- SUBMIT -->
+        <div class="btn-group input-group" role="group" aria-label="Basic outlined example">
+            <a href="{% url 'products:index' %}" class="btn btn-outline-secondary">Cancelar</a>
+            <button type="submit" class="btn btn-outline-success">Guardar</button>
+        </div>
+    </form>
 </div>
 
 <script>
