CRUD customer y debt

--- a/core/customers/templates/customers/index.html
+++ b/core/customers/templates/customers/index.html
@@ -10,32 +10,22 @@
     <table id="productos" class="display table table-striped table-bordered table-hover dataTable" style="width:100%;">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Position</th>
-                <th>Office</th>
-                <th>Age</th>
-                <th>Start date</th>
-                <th>Salary</th>
+                <th>Nombre</th>
+                <th>Deuda</th>
             </tr>
         </thead>
         <tbody>
+            {% for customer in customers %}
             <tr>
-                <td class=" d-flex justify-content-between">Tiger Nixon<a href="{% url 'customers:edit' %}">Editar</a></td>
-                <td>System Architect</td>
-                <td>Edinburgh</td>
-                <td>61</td>
-                <td>2011-04-25</td>
-                <td>$320,800</td>
+                <td class=" d-flex justify-content-between">{{ customer.name }}<a href="{% url 'customers:edit' %}?id={{ customer.id }}">Editar</a></td>
+                <td>{{ customer.t_debt }}</td>
             </tr>
+            {% endfor %}
         </tbody>
         <tfoot>
             <tr>
-                <th>Name</th>
-                <th>Position</th>
-                <th>Office</th>
-                <th>Age</th>
-                <th>Start date</th>
-                <th>Salary</th>
+                <th>Nombre</th>
+                <th>Deuda</th>
             </tr>
         </tfoot>
     </table>
