--- a/core/customers/templates/customers/edit.html
+++ b/core/customers/templates/customers/edit.html
@@ -3,17 +3,18 @@
 {% block body %}
 {% load static %}
 <script src="{% static 'js/jquery-3.7.1.js' %}"></script>
+<script src="{% static 'js/jquery.priceformat.min.js' %}"></script>
 <script src="{% static 'js/dataTables1.js' %}"></script>
 <div class="container align-content-center overflow-auto " style="margin:  5rem auto;">
     <div class="form-group text-center mb-3">
-        <h3 class="m-0">$name</h3>
-        <small class="text-danger"><i>EL CLIENTE DEBE $debt</i></small>
+        <h3 class="m-0">{{customer.name}}</h3>
+        {% if t_debt < 0 %}<small class="text-danger"><i>EL CLIENTE DEBE <span class="pricef">{{ t_debt }}</span></i></small>{% endif %}
     </div>
     
     <div class="input-group mb-3">
         <h6 class=" navbar-text pe-3">Nombre de cliente:</h6>
         <span class="input-group-text" id="basic-addon1"><span class="fas fa-user-tag"></span></span>
-        <input type="text" class="form-control" placeholder="Nombre de producto" aria-label="Nombre de producto" aria-describedby="basic-addon1" value="$name">
+        <input id="iname" type="text" class="form-control" placeholder="Nombre de cliente..."  value="{{customer.name}}">
     </div>
     <table id="productos" class="display table table-striped table-bordered table-hover dataTable" style="width:100%;">
         <thead>
@@ -24,21 +25,13 @@
             </tr>
         </thead>
         <tbody>
-            <tr class="table-danger">
-                <td class=" d-flex justify-content-between">2011-04-25<a href="#">Eliminar</a></td>
-                <td>Marzo</td>
-                <td>$320,800</td>
+            {% for debt in debts %}
+            <tr {% if debt.amount > 0 %}class="table-success"{% else %}class="table-danger"{% endif %}>
+                <td class=" d-flex justify-content-between">{{ debt.date }}<a href="{% url 'customers:edit' %}?delete_debt={{ debt.id }}">Eliminar</a></td>
+                <td>{{ debt.date|date:"F"|capfirst }}</td>
+                <td><span class="pricef">{{ debt.amount }}</span></td>
             </tr>
-            <tr>
-                <td class=" d-flex justify-content-between">2015-04-25<a href="#">Eliminar</a></td>
-                <td>Abril</td>
-                <td>$10,800</td>
-            </tr>
-            <tr>
-                <td class=" d-flex justify-content-between">2023-05-25<a href="#">Eliminar</a></td>
-                <td>Marzo</td>
-                <td>$520,800</td>
-            </tr>
+            {% endfor %}
         </tbody>
         <tfoot>
             <tr>
@@ -49,26 +42,53 @@
         </tfoot>
     </table>
     <div class="container border mt-3 p-2" id="debtDiv" style="display: none;">
-        <div class=" input-group">
-            <input type="datetime-local" name="" id="" class="form-control">
-            <input type="number" name="" id="" placeholder="Importe (Valor + es pago, - es deuda)" class="form-control">
-            <button class="btn btn-outline-secondary" type="button">Aceptar</button>
-        </div>
+        <!-- ADD DEBT -->
+        <form action="{% url 'customers:create' %}" method="post">
+            {% csrf_token %}
+            <div class=" input-group">
+                <input type="hidden" name="id" value="{{ customer.id }}">
+                <input type="datetime-local" name="datetime" class="form-control" required>
+                <input type="number" name="amount" placeholder="Importe (Valor positivo es pago, negativo es deuda)" class="form-control" required>
+                <button class="btn btn-outline-secondary" type="submit">Aceptar</button>
+            </div>
+        </form>
     </div>
     <div class="btn-group input-group mt-3" role="group" aria-label="Basic outlined example">
         <button type="button" class="btn btn-outline-primary" id="debtBtn">Añadir deuda</button>
     </div>
-    <div class="btn-group input-group mt-3" role="group" aria-label="Basic outlined example">
-        <a href="{% url 'customers:index' %}" class="btn btn-outline-secondary">Cancelar</a>
-        <button type="button" class="btn btn-outline-danger">Eliminar</button>
-        <button type="button" class="btn btn-outline-success">Guardar</button>
-    </div>
+    <!-- NAME SUBMIT -->
+    <form action="{% url 'customers:edit' %}" method="post" id="nameForm">
+        {% csrf_token %}
+        <!-- NAME -->
+        <input type="hidden" name="name" id="cname">
+        <!-- ID -->
+        <input type="hidden" name="id" value="{{ customer.id }}">
+        <!-- SUBMIT -->
+        <div class="btn-group input-group mt-3" role="group" aria-label="Basic outlined example">
+            <a href="{% url 'customers:index' %}" class="btn btn-outline-secondary">Cancelar</a>
+            <a href="{% url 'customers:edit' %}?delete={{ customer.id }}" class="btn btn-outline-danger">Eliminar</a>
+            <button type="submit" class="btn btn-outline-success">Guardar</button>
+        </div>
+    </form>
 </div>
 <script>
     new DataTable('#productos');
     $(document).ready(function(){
         $("#debtBtn").click(function(){
             $("#debtDiv").show();
+        });
+        $('#nameForm').on('submit', function(e) {
+            e.preventDefault();
+            $('#cname').val($('#iname').val());
+            this.submit();
+        });
+        $('.pricef').each(function() {
+            $(this).attr("data-price", $(this).text())
+            $(this).priceFormat({
+                allowNegative: true,
+                centsLimit: 1,
+                prefix: '$'
+            });
         });
     });
 </script>
